--- a/l10n_mx_cfdi/views/views.xml
+++ b/l10n_mx_cfdi/views/views.xml
@@ -1,60 +1,33 @@
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="base_cfdi.list">
-      <field name="name">base_cfdi list</field>
-      <field name="model">base_cfdi.base_cfdi</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
--->
+    <data>
+        <!-- explicit list view definition -->
 
-    <!-- actions opening views on models -->
-<!--
-    <record model="ir.actions.act_window" id="base_cfdi.action_window">
-      <field name="name">base_cfdi window</field>
-      <field name="res_model">base_cfdi.base_cfdi</field>
-      <field name="view_mode">tree,form</field>
-    </record>
--->
+        <!-- actions opening views on models -->
+        <!--
+            <record model="ir.actions.act_window" id="l10n_mx_cfdi.action_window">
+              <field name="name">l10n_mx_cfdi window</field>
+              <field name="res_model">l10n_mx_cfdi.l10n_mx_cfdi</field>
+              <field name="view_mode">tree,form</field>
+            </record>
+        -->
+        <record model="ir.actions.act_window" id="l10n_mx_cfdi.document_action">
+            <field name="name">CFDI Documents</field>
+            <field name="res_model">l10n_mx_cfdi.document_4_0</field>
+            <field name="view_mode">tree,form</field>
+        </record>
 
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="base_cfdi.action_server">
-      <field name="name">base_cfdi server</field>
-      <field name="model_id" ref="model_base_cfdi_base_cfdi"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
+        <!-- Menu items -->
+        <menuitem id="l10n_mx_cfdi.menu_l10n_mx_cfdi"
+                  name="CFDI"
+                  parent="account.menu_finance_entries"
+                  sequence="10"/>
 
-    <!-- Top menu item -->
-<!--
-    <menuitem name="base_cfdi" id="base_cfdi.menu_root"/>
--->
-    <!-- menu categories -->
-<!--
-    <menuitem name="Menu 1" id="base_cfdi.menu_1" parent="base_cfdi.menu_root"/>
-    <menuitem name="Menu 2" id="base_cfdi.menu_2" parent="base_cfdi.menu_root"/>
--->
-    <!-- actions -->
-<!--
-    <menuitem name="List" id="base_cfdi.menu_1_list" parent="base_cfdi.menu_1"
-              action="base_cfdi.action_window"/>
-    <menuitem name="Server to list" id="base_cfdi" parent="base_cfdi.menu_2"
-              action="base_cfdi.action_server"/>
--->
-  </data>
+        <!-- actions -->
+        <menuitem id="l10n_mx_cfdi.menu_l10n_mx_cfdi_document"
+                  name="Documents"
+                  parent="l10n_mx_cfdi.menu_l10n_mx_cfdi"
+                  action="l10n_mx_cfdi.document_action"
+                  sequence="10"/>
+
+    </data>
 </odoo>
